# modgen

./: CMakeLists.txt  LICENSE  README.md  modgen.cpp  modgen_ast_parser.cpp
cmake/: compiler_wrapper.cmake  modgen.cmake  std.cmake
demo/: CMakeLists.txt
